--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #000000;
     color: #FFFFFF;
-    font-family: verdana, "Times New Roman";
+    font-family: Verdana, "Times New Roman";
     margin-top: 25px;
     margin-left: 25px;
     margin-right: 25px;
@@ -14,7 +14,7 @@ h1 {
 }
 
 h2 {
-    padding: 32px;
+    font-size: 32px;
     /* color: #808080; */
     text-shadow: #808080 2px 4px;
 }
@@ -100,4 +100,5 @@ footer p {
     padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
+    padding-left: 0px;
 }
