--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ div {
     border-bottom: solid 3px; 
     border-left: solid 10px;
     border-right: none;
+    border-top: none;
 }
 
 .blue {
@@ -59,6 +60,7 @@ div {
     border-right: solid 10px; 
     border-bottom: solid 3px;
     border-left: none;
+    border-top: none;
 }
 
 .yellow {
@@ -68,6 +70,7 @@ div {
     border-bottom: solid 3px; 
     border-left: solid 10px;
     border-right: none;
+    border-top: none;
 }
 
 .yellow p, .yellow h2 {
@@ -85,6 +88,7 @@ div {
     border-right: solid 10px; 
     border-bottom: solid 3px;
     border-left: none;
+    border-top: none;
 }
 
 span {
